<resources>
    <string name="app_name">Ohel Shem</string>
    <string name="changelog_internal_error_parsing">שגיאה בקריאת הקובץ</string>
    <string name="changelog_internal_error_internet_connection">אין חיבור אינטרנט כדי להביא את המידע</string>
    <string name="changelog_header_version">"גרסה "</string>
    <string name="changelog_row_bulletpoint">\u2022</string>
    <string name="login">התחברות</string>
    <string name="id">מספר ת.ז.</string>
    <string name="password">סיסמה</string>
    <string name="do_login">התחבר</string>
    <string name="invalid_id">מספר ת.ז. שגוי</string>
    <string name="password_too_short">סיסמה קצרה מדי</string>
    <string name="login_wrong">מספר ת.ז או סיסמה אינם נכונים</string>
    <string name="no_connection">אין חיבור לאינטרנט</string>
    <string name="no_connection_subtitle">אנא התחבר לאינטרנט ונסה שנית</string>
    <string name="general_error">שגיאה, אנא נסה בשנית</string>
    <string name="teachers_are_not_supported_yet">אנו מצטערים, אבל תמיכה במורים תתווסף רק בגרסה הבאה</string>
    <string name="dashboard">ראשי</string>
    <string name="changes">שינויים</string>
    <string name="refreshing">מעדכן מידע</string>
    <string name="timetable">מערכת שעות</string>
    <string name="timetable_notif">מערכת שעות יומית</string>
    <string name="dates">מועדים</string>
    <string name="contacts">הכיתה שלי</string>
    <string name="tests">מבחנים</string>
    <string name="messages">הודעות</string>
    <string name="help">עזרה</string>
    <string name="settings">הגדרות</string>
    <string name="holidays">חגים ומועדים</string>
    <string name="regulations">תקנון בית הספר</string>
    <string name="updated_at">עודכן ב-</string>
    <string name="changes_long">שינויים כיתתים</string>
    <string name="layer_changes">שינויים בשכבת</string>
    <string name="clazz">כיתה</string>
    <string name="refresh_fail">אירעה שגיאה בטעינת המידע</string>
    <string name="refreshed">המידע עודכן</string>
    <string name="not_available_for_teachers">אפשרות זו אינה זמינה למורים</string>
    <string name="list">רשימה</string>
    <string name="calendar">לוח שנה</string>
    <string name="refresh">רענן</string>
    <string name="day">יום</string>
    <string name="error">שגיאה</string>
    <string name="end_date">סיום</string>
    <string name="start_date">התחלה</string>
    <string name="days">ימים</string>
    <string name="no_thanks">לא תודה</string>
    <string name="download">הורד</string>
    <string name="apply">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="personal">אישי</string>
    <string name="tomorrow">מחר</string>
    <string name="future">בעתיד</string>
    <string name="short_minute">דקות</string>
    <string name="to_start">לשיעור</string>
    <string name="left">נשארו</string>
    <string name="end_of_day">סוף היום</string>
    <string name="go_to_timetable">עבור למערכת השעות</string>
    <string name="current_hour">שעה נוכחית</string>
    <string name="next_hour">שעה הבאה</string>
    <string name="instead">במקום</string>
    <string name="empty_timetable">מערכת השעות ריקה</string>
    <string name="edit">ערוך</string>
    <string name="done">בוצע</string>
    <string name="start_edit_mode">מתחיל מצב עריכה, לחץ על השיעור שברצונך לשנות</string>
    <string name="edit_mode_not_supported">מצב עריכה זמין רק למערכת שעות האישית</string>
    <string name="finish_edit_mode">מצב עריכה הופסק</string>
    <string name="current_name">שם השיעור הנוכחי</string>
    <string name="current_teacher">שם המורה הנוכחי</string>
    <string name="original_name">שם השיעור המקורי</string>
    <string name="original_teacher">שם המורה המקורי</string>
    <string name="with">עם</string>
    <string name="new_name">שם השיעור החדש</string>
    <string name="new_teacher_name">שם המורה החדש</string>
    <string name="change_all">שנה עבור כל השיעורים בעלי אותו השם</string>
    <string name="change_all_today">שנה עבור כל השיעורים בעלי אותו השם היום</string>
    <string name="edit_lesson">עריכת שיעור</string>
    <string name="return_to_default">החזר למקור</string>
    <string name="settings_name">ניהול עריכות שיעורים</string>
    <string name="save_backup">גיבוי</string>
    <string name="restore_backup">שחזור</string>
    <string name="no_file_manager_installed">אף סייר קבצים לא מותקן על המכשיר</string>
    <string name="choose_opener">בחר תוכנה לשימוש</string>
    <string name="restored">שוחזר בהצלחה</string>
    <string name="invalid_backup_file">קובץ גיבוי לא תקין</string>
    <string name="share">שתף</string>
    <string name="backup_file_name">קובץ גיבוי שינויים במערכת שעות</string>
    <string name="current_room">חדר נוכחי</string>
    <string name="new_room">חדר חדש</string>
    <string name="main_room">חדר כיתת האם</string>
    <string name="weeks_left_to_summer">שבועות לקיץ</string>
    <string name="days_left">ימים לחופש הבא</string>
    <string name="days_left_to_summer">ימים לחופשת הקיץ</string>
    <string name="total_tests">מבחנים השנה</string>
    <string name="days_left_to_next_test">ימים למבחן הבא</string>
    <string name="old_test">מבחנים ישנים</string>
    <string name="tests_in_next_week">מבחנים בשבוע הקרוב</string>
    <string name="dialog_close">סגור</string>
    <string name="choose_class_for_tests_long_text">בחר כיתה על מנת לראות את המבחנים שלה</string>
    <string name="students">תלמידים</string>
    <string name="call">התקשר</string>
    <string name="add_to_contacts">הוסף לאנשי הקשר</string>
    <string name="send_sms">שלח הודעה</string>
    <string name="more">עוד אפשרויות</string>
    <string name="choose_class_for_contacts_long_text">בחר כיתה על מנת לראות את אנשי הקשר שלה</string>
    <string name="group">מקבץ</string>
    <string name="ohel_shem_notification_title">הודעה מאהל שם</string>
    <string name="notification_about_changes">התראה על שינויים</string>
    <string name="birthdays">ימי הולדת</string>
    <string name="birthdays_in_class">ימי הולדת בכיתה</string>
    <string name="birthdays_in_class_teacher">ימי הולדת בכיתת החינוך</string>
    <string name="changes_realtime">שינויים</string>
    <string name="holidays_notif">חופשים</string>
    <string name="birthdays_in_school">ימי הולדת בבית הספר</string>
    <string name="no_birthdays_in_school">אין ימי הולדת היום</string>
    <string name="want_get_notification_for_changes">האם ברצונך לקבל התראה בשעה תשע כשהשינויים מתעדכנים?</string>
    <string name="test_in">מקצוע המבחן</string>
    <string name="enter_to_see_changes">היכנסו על מנת לראות את השינויים</string>
    <string name="try_again">נסה שנית</string>
    <string name="no_data">אין מידע עדכני</string>
    <string name="no_data_subtitle">רענן על מנת לקבל מידע עדכני</string>
    <string name="no_changes">אין שינויים</string>
    <string name="no_changes_subtitle">כנראה ששחר אלוני לא חשב עליך היום…</string>
    <string name="no_new_data">אין מידע מעודכן</string>
    <string name="no_new_data_subtitle">אתר בית הספר לא עודכן להיום, אנא רענן שנית מאוחר יותר</string>
    <string name="shabat_today">שבת היום!</string>
    <string name="shabat_today_subtitle">תתביישו לכם!</string>
    <string name="friday_today">שישי היום!</string>
    <string name="friday_today_subtitle">עתידות: בכיתה יא תלמדו בשישי</string>
    <string name="close_week">בשבוע הקרוב</string>
    <string name="later">מאוחר יותר</string>
    <string name="floating_hour">נוספה לך שעה</string>
    <string name="holiday_today">חופש היום</string>
    <string name="holiday_today_subtitle">לך, לך לישון</string>
    <string name="today_plan">המערכת להיום</string>
    <string name="tomorrow_plan">המערכת למחר</string>
    <string name="future_plan">המערכת ליום %1$s</string>
    <string name="see_more">ראה הכל</string>
    <string name="no_tests_next_week">אין מבחנים בשבוע הקרוב</string>
    <string name="test_tomorrow">מבחן מחר</string>
    <string name="tests_this_week">מבחנים בשבוע הקרוב</string>
    <string name="tests_this_week_subtitle">היכנסו לאפליקציה על מנת לראות</string>
    <string name="holiday_notification">מחר יום חופש</string>
    <string name="permission_denied">אנא אשר את ההרשאה על מנת שזה יעבוד</string>
    <string name="window_lesson">שעת חלון</string>
    <string name="guessing_game">משחק השינויים</string>
    <string name="guessing_game_description">חושב שאתה שחר אלוני? בוא נראה אם אתה יכול לנחש את השינויים</string>
    <string name="not_this_time">לא הפעם</string>
    <string name="hours_tomorrow">שעות מחר</string>
    <string name="changes_tomorrow">שינויים מחר</string>
    <string name="finished">סיימתי</string>
    <string name="launch_game">פתח משחק</string>
    <string name="never">אף פעם</string>
    <string name="start_playing">התחל לשחק</string>
    <string name="generating_data">מייצר תמונה…</string>
    <string name="birthday_title">יום הולדת בכיתה שלך</string>
    <string name="birthday_message">מזל טוב ל%1$s</string>
    <string name="changes_notif_title">השינויים התעדכנו</string>
    <string name="changes_notif_title_tmrw">השינויים התפרסמו למחר</string>
    <string name="no_connection_subtitle_notification">אנא התחבר לאינטרנט והיכנס לאפליקציה על מנת לצפות בשינויים</string>
    <string name="login_error">פרטי החשבון השתנו</string>
    <string name="login_error_subtitle">אנא התחבר שוב על מנת לצפות בשינויים</string>
    <string name="try_again_notification">היכנס לאפליקציה ורענן על מנת לקבל את השינויים</string>
    <string name="grader">Grader</string>
    <string name="grader_dialog_title">לוקחים את המשו\"ב צעד קדימה</string>
    <string name="grader_dialog_description">מהיוצרים של אפליקציית אהל שם. קליינט למשו\"ב עם כל הפיצ\'רים המוכרים והאהובים, ביחד עם גרפים שנראים טוב וממשק מהיר. וגם המשו\"ב לא ממש מחבבים את האפליקציה, אז אם אתם לא אוהבים את המשו\"ב, זאת סיבה מעולה להוריד!</string>
    <string name="menu_mashov_message">התקן את אפליקציית Grader</string>
    <string name="perpage">PerPage</string>
    <string name="perpage_hebrew">פרפייג\'</string>
    <string name="perpage_dialog_description">דבר אינו יכול לגבור על הכוח של תלמידים שעובדים ביחד למען מטרה משותפת.
מוזמנים ליהנות מפרפייג’ - אפליקציה חברתית לשיתוף חומרי לימוד, וביחד לנצח את הבגרות!</string>
    <string name="menu_perpage_message">התקן את אפליקציית PerPage</string>
    <string name="overrides">עריכות במערכת</string>
    <string name="no_overrides">אין עריכות למערכת השעות</string>
    <string name="development_info">מידע למפתחים</string>
    <string name="developer_mode">מצב מפתחים</string>
    <string name="version_name">שם גרסה</string>
    <string name="version_code">מספר גרסה</string>
    <string name="version_type">סוג גרסה</string>
    <string name="not_yet_implemented">אפשרות זו עדיין איננה זמינה</string>
    <string name="theme_settings">ערכת נושא</string>
    <string name="theme_color">צבע מרכזי</string>
    <string name="restart_app">הפעל מחדש את האפליקציה</string>
    <string name="app_restart_required">על מנת ליישם את השינויים יש לסגור ולפתוח את האפליקציה</string>
    <string name="primary_class_info">ניתן לשנות את כיתות הלימוד במערכת מידעאהל</string>
    <string name="dark_mode">מצב לילה</string>
    <string name="enabled">מופעל</string>
    <string name="disabled">מכובה</string>
    <string name="automatic">אוטומטי</string>
    <string name="save">שמור</string>
    <string-array name="night_mode_options">
        <item>@string/disabled</item>
        <item>@string/enabled</item>
        <item>@string/automatic</item>
    </string-array>
    <string name="fake_changes">זייף שינויים</string>
    <string name="fake_no_changes">זייף אין שינויים</string>
    <string name="cancel_faking">בטל זיוף</string>
    <string name="set_primary_class">בחר כיתת חינוך</string>
    <string name="set_current_class">בחר כיתה</string>
    <string name="no_primary_class">ללא כיתת חינוך</string>
    <string name="no_primary_class_short">ללא</string>
    <string name="teacher_settings">הגדרות למורים</string>
    <string name="primary_class_setting">כיתת חינוך</string>
</resources>