<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_width="300dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/theme_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/redTheme"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                tools:background="@color/red" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/blueTheme"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                tools:background="@color/blue" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/greenTheme"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                tools:background="@color/green" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dark_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:id="@+id/nightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/automatic"
            android:textAlignment="textStart"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/disabled"
            android:textAlignment="textStart"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/enabled"
            android:textAlignment="textStart"
            android:textColor="@android:color/black" />


    </RadioGroup>
</LinearLayout>