<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/original_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/original"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="חנג בנים, חנג בנות ליאו בלה" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/current_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="ספורט ליאוניד ימפלוסקי" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/original_teacher"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/originalTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="חנג בנים, חנג בנות ליאו בלה" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/current_teacher"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="ספורט ליאוניד ימפלוסקי" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/hour"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/number_circle"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="1" />
    </FrameLayout>
</LinearLayout>