<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/loginWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_login_login_color"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/material_login_register_color"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/idInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
                    app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLength="9"
                        android:inputType="numberDecimal"
                        android:hint="@string/id"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
                    app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/login_back">

                    <TextView
                        android:id="@+id/loginButton"
                        style="@style/MaterialLoginTheme.SelectableItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/do_login"
                        android:textColor="@color/material_login_register_color"
                        android:textSize="20sp" />
                </FrameLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/registerFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_add"
        app:backgroundTint="@color/material_login_register_color"
        app:layout_anchor="@id/loginWindow"
        app:layout_anchorGravity="right|end|top" />

</android.support.design.widget.CoordinatorLayout>
